app-k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ninjia
spec:
  selector:
    matchLabels:
      run: ninjia
  replicas: 1
  template:
    metadata:
      labels:
        run: ninjia
    spec:
      containers:
        - name: ninjia
          image: 192.168.0.115:5001/app:latest
          ports:
            - containerPort: 80
