app-k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ninjia
  labels:
    run: ninjia
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: ninjia
